--- a/_scss/screen.scss
+++ b/_scss/screen.scss
@@ -48,6 +48,7 @@ body {
 	.row {
 		display: block;
 
+		&,
 		&.wid-33-33-33,
 		&.wid-33-66,
 		&.wid-66-33 {
